k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onboarding
  labels:
    app.kubernetes.io/part-of: dcaas
