k8s/kea-dhcp.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kea-dhcp
  namespace: metal3
  labels:
    app: kea-dhcp
spec:
  selector:
    matchLabels:
      app: kea-dhcp
  template:
    metadata:
      labels:
        app: kea-dhcp
    spec:
      hostNetwork: true
      nodeSelector:
        ironic-conductor: enabled
      tolerations:
        - key: sunet.se/ironic-conductor
          operator: Exists
          effect: NoSchedule
      containers:
        - name: kea-dhcp4
          image: docker.cloudsmith.io/isc/docker/kea-dhcp4:2.7.9
          ports:
            - containerPort: 8000
              name: ctrl-api
          volumeMounts:
            - name: kea-config
              mountPath: /etc/kea
          resources:
            requests:
              cpu: 100m
              memory: 96Mi
            limits:
              cpu: 300m
              memory: 192Mi
      volumes:
        - name: kea-config
          secret:
            secretName: kea-dhcp4-config
